--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.5.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-calendars": "^1.1300.0",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-image-picker": "^5.6.0",
     "react-native-paper": "^5.9.1",
